--- a/countries.html
+++ b/countries.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countries</title>
+    <title>All Countries</title>
     <link rel="stylesheet" href="css/countries.css">
 </head>
 
 <body>
+    <section id="country-detail">
+        <h1>Country Detail</h1>
+    </section>
     <h1>Countries</h1>
     <div id="countries">
 
