33-5 Explore meal db api and create dynamic url to load meals

--- a/country.html
+++ b/country.html
@@ -17,7 +17,7 @@
             border: 1px solid red;
             margin: 10px;
             padding: 10px;
-            background-color: aquamarine;
+            background-color: cadetblue;
         }
     </style>
 </head>
