--- a/mealdb.html
+++ b/mealdb.html
@@ -12,16 +12,18 @@
 </head>
 
 <body class="bg-grey">
-    <h2 class="text-center text-success">Search Your Favorite Food</h2>
+    <!-- Meal Search  -->
+    <h2 class="text-center text-success mt-3">Search Your Favorite Food</h2>
     <div class="input-group mb-3 w-50 mx-auto">
         <input id="search-field" type="text" class="form-control" placeholder="Search The Food You Want"
             aria-label="Recipient's username" aria-describedby="button-addon2">
         <button onclick="searchFood()" class="btn btn-outline-secondary" type="button"
             id="button-search">Search</button>
     </div>
+    <!-- search Result -->
+    <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
 
-
-
+    </div>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
