--- a/mealdb.html
+++ b/mealdb.html
@@ -20,6 +20,11 @@
         <button onclick="searchFood()" class="btn btn-outline-secondary" type="button"
             id="button-search">Search</button>
     </div>
+
+    <div id="meal-detail" class="w-50 mx-auto">
+
+    </div>
+
     <!-- search Result -->
     <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
 
