--- a/mealdb-async.html
+++ b/mealdb-async.html
@@ -21,10 +21,6 @@
             id="button-search">Search</button>
     </div>
 
-    <!-- error -->
-    <div>
-        <p id="error-message" class="text-danger text-center">There is an error found</p>
-    </div>
     <div id="meal-detail" class="w-50 mx-auto">
 
     </div>
@@ -38,7 +34,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
-    <script src="js/mealdb.js"></script>
+    <script src="js/mealdb-async.js"></script>
 </body>
 
 </html>
